testing by adding one line

--- a/MTR.html
+++ b/MTR.html
@@ -14,6 +14,7 @@
     <div id="time">wait for the arriving time...</div>
 
     <div id="inone"> This is all the info in one line</div>
+    <p>test</p>
     <script src="index.js" rel="script"></script>
 </body>
 </html>
