簡化頁面 單純顯示四班列車

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link href="index.css" rel="stylesheet"> 
 </head>
 <body>
-    <strong>this page still need to be waited...</strong>
+
+    <!-- 
     <div id="destination"> wait for the destination...</div>
     <div id="platform">wait for the platform number...</div>
     <div id="time">wait for the arriving time...</div>
+    -->
 
-    <div id="inone"> This is all the info in one line</div>
-    <p>test</p>
+    <div id="inone"> Please wait for the data...</div>
+
     <script src="index.js" rel="script"></script>
 </body>
 </html>
